--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 </div>
                 <button type="submit" class="cta-button">Send Message</button>
             </form>
-            <p>Or contact me via email: <a href="mailto:[boxiee322@gmail.com] rel="noopener noreferrer">[boxiee322@gmail.com]</a></p>
+            <p>Or contact me via email: <a href="mailto:[pipparirakshith45504@gmail.com] rel="noopener noreferrer">[pipparirakshith45504@gmail.com]</a></p>
         </section>
     </main>
     <div class="faq-container">
