--- a/index.html
+++ b/index.html
@@ -94,10 +94,15 @@
                         
                         Looking forward to building something awesome — let’s connect!.</p>
                     <p>I specialize in [  like React, Vue, Angular, plain JS, CSS frameworks] and I'm always eager to learn new things and take on challenging projects.</p>
-                    <a href="file/Rakshith_Premium_Matrix_Resume.pptx"  rel="noopener noreferrer" target="_blank" class="cta-button secondary">Download Resume</a>
+                    <a href=""  rel="noopener noreferrer" target="_blank" class="cta-button secondary">Download Resume</a>
                 </div>
                 </div>
         </section>
+        <div class="box">
+          <h1>About Boxiee </h1>
+          <video src="media/about.mp4" autoplay loop controls muted></video>
+
+        </div>
         <section class="battle-card-section">
           <div class="battle-card">
             <!-- FRONT -->
