--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </section>
         <div class="box">
           <h1>About Boxiee </h1>
-          <video src="media/about.mp4" autoplay loop controls muted></video>
+          <video src="media/about.mp4" autoplay loop controls muted  width="100%"></video>
 
         </div>
         <section class="battle-card-section">
