--- a/index.html
+++ b/index.html
@@ -39,8 +39,6 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta property="og:site_name" content="Rakshith's Portfolio">
 <meta property="og:locale" content="en_US">
-<meta name="rating" content="general">
-  <meta name="distribution" content="global">
   <meta name="revisit-after" content="7 days">
   <link rel="alternate" href="https://rakshith360.github.io/rakshith" hreflang="en" />
   <link rel="alternate" href="https://rakshith360.github.io/rakshith/es/" hreflang="es" />
@@ -127,7 +125,7 @@
                         
                         Looking forward to building something awesome — let’s connect!.</p>
                     <p>I specialize in [  like React, Vue, Angular, plain JS, CSS frameworks] and I'm always eager to learn new things and take on challenging projects.</p>
-                    <a href=""  rel="noopener noreferrer" target="_blank" class="cta-button secondary">Download Resume</a>
+                    <a href="file/rakshith resume.pdf"  rel="noopener noreferrer" target="_blank" class="cta-button secondary">Download Resume</a>
                 </div>
                 </div>
         </section>
