--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         
                         Looking forward to building something awesome — let’s connect!.</p>
                     <p>I specialize in [  like React, Vue, Angular, plain JS, CSS frameworks] and I'm always eager to learn new things and take on challenging projects.</p>
-                    <a href="file/rakshith resume.pdf"  rel="noopener noreferrer" target="_blank" class="cta-button secondary">Download Resume</a>
+                    <a href="file/rakshith resume.pdf" download  rel="noopener noreferrer" target="_blank" class="cta-button secondary">Download Resume</a>
                 </div>
                 </div>
         </section>
